build: remove aot cache in dockerfile